# SPDX-License-Identifier: GPL-2.0-or-later

load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@bazel_skylib//lib:selects.bzl", "selects")
load("//common:modules.bzl", "get_gki_modules_list")
load("//build/bazel_common_rules/dist:dist.bzl", "copy_to_dist_dir")
load(
    "//build/kernel/kleaf:kernel.bzl",
    "kernel_abi",
    "kernel_build",
    "kernel_module",
    "kernel_module_group",
    "kernel_modules_install",
    "kernel_images",
    "kernel_unstripped_modules_archive",
    "merged_kernel_uapi_headers",
)
load("//build/kernel/kleaf:hermetic_tools.bzl", "hermetic_genrule")
load("//exynos/soc-series/common/impl:vendor_ramdisk.bzl", "create_vendor_ramdisk")
load("//exynos/soc-series/common/impl:dtbo_cfg.bzl", "dtbo_cfg")
load("//exynos/soc-series/common/impl:dtbo.bzl", "dtbo")
load("//exynos/soc-series/common/impl:check_module_list.bzl", "check_module_list")
load(":modules.bzl",
    "get_common_kernel_modules_list",
    "get_all_vendor_boot_modules_list",
    "get_mx8855_vendor_modules_list",
    "get_all_system_dlkm_blocklist",
    "get_all_vendor_dlkm_blocklist",
    "register_mx8855_module",
    "get_all_vendor_dlkm_modules_list",
    "get_all_kunit_test_list",
)
load("//exynos/soc-series/common/impl:create_blocklist.bzl", "create_blocklist")
load(":lego.bzl", "lego_module_list", "lego_dtbo_list", "lego_model")

package(
    default_visibility = [
        "//exynos/soc-series:__subpackages__",
    ],
)
__soc_dtbs = [
    "mx8855/" + f for f in lego_dtbo_list
]

__soc_dtbs_16k = [
    "mx8855_16k/" + f for f in lego_dtbo_list
] + __soc_dtbs

__soc_dtbs_emul = [
    "//exynos/device/mx/mx8855:mx8855_emul/s5e8855-mx8855_emul.dtbo",
    "//exynos/device/mx/mx8855:mx8855_emul/exynos-base-dts/s5e8855_emul.dtb",
]

__make_goals = [
    "modules",
    "dtbs",
]

write_file(
    name = "vendor_kunit_modules_list",
    out = "vendor_kunit_modules.mx8855",
    content = select({
        "//exynos/soc-series/common:eng_build": get_all_kunit_test_list("eng"),
        "//exynos/soc-series/common:userdebug_build": get_all_kunit_test_list("userdebug"),
        "//exynos/soc-series/common:user_build": get_all_kunit_test_list("user"),
    })
)

write_file(
    name = "vendor_dlkm_modules_list",
    out = "vendor_dlkm_modules.mx8855",
    content = select({
        "//exynos/soc-series/common:eng_build": get_all_vendor_dlkm_modules_list("eng"),
        "//exynos/soc-series/common:userdebug_build": get_all_vendor_dlkm_modules_list("userdebug"),
        "//exynos/soc-series/common:user_build": get_all_vendor_dlkm_modules_list("user"),
    })
)

write_file(
    name = "mx8855_vendor_dlkm_blocklist",
    out = "vendor_dlkm.modules.blocklist.mx8855",
    content = get_all_vendor_dlkm_blocklist()
)

write_file(
    name = "mx8855_system_dlkm_blocklist",
    out = "system_dlkm.modules.blocklist.mx8855",
    content = get_all_system_dlkm_blocklist()
)

create_blocklist(
    name = "mx8855_vendor_dlkm_modules_blocklist",
    modules_blocklist = ":mx8855_vendor_dlkm_blocklist"
)

create_blocklist(
    name = "mx8855_system_dlkm_modules_blocklist",
    modules_blocklist = ":mx8855_system_dlkm_blocklist"
)

kernel_build(
    name = "mx8855",
    base_kernel = "//common:kernel_aarch64",
    srcs = glob([
            "build.config.*",
            "arch/arm64/boot/dts/**",
            "arch/arm64/configs/**",
            "Kconfig.ext",
            "Kconfig.ext_modules",
        ],
        exclude =[
            ".*",
            ".*/**",
            "BUILD.bazel",
            "**/*.bzl",
            "build.config.*",
        ],
    ) + [
        # keep sorted
        ":mx8855.dt-bindings",
        "//common:common_kernel_sources",
        "//exynos/soc-series/s-android15:exynos.soc_kconfig",
        "//exynos/soc-series/s-android15:exynos.soc_fragment",
        "//exynos/soc-series/s-android15:build.config.s5e8855_v",
        "//exynos/soc-series/s-android15:exynos.dt-bindings",
        "//exynos/device/mx/mx8855:exynos.mx8855_kconfig",
        "//exynos/external-modules/sgpu:sgpu.kconfig",
	"//exynos/external-modules/camera:camera.kconfig",
    ],
    kmi_symbol_list = select({
        "//exynos/soc-series/common:abi_update": "//common:android/abi_gki_aarch64_exynos",
        "//conditions:default": None,
    }),
    trim_nonlisted_kmi = False,
    kmi_symbol_list_strict_mode = False,
    outs = [
        ".config",
        "vmlinux",
        "Module.symvers",
        "modules.order",
        "exynos-base-dts/s5e8855.dtb",
        "exynos-base-dts/s5e8855.dtb.reverse.dts",
    ] + [
        f + suffix for f in lego_dtbo_list for suffix in ["", ".reverse.dts"]
    ],
    kconfig_ext = ":Kconfig.ext",
    build_config = ":build.config.mx8855_v",
    dtstree = "//exynos/device/mx/mx8855/arch/arm64/boot/dts:mx8855_dt",
    # in-tree kernel modules
    module_outs = get_common_kernel_modules_list(),
    collect_unstripped_modules = True,
    strip_modules = True,
    make_goals = __make_goals,
    defconfig_fragments = select({
        "//exynos/soc-series/common:eng_build": [ ":arch/arm64/configs/eng.fragment"],
        "//exynos/soc-series/common:userdebug_build": [ ":arch/arm64/configs/userdebug.fragment"],
        "//exynos/soc-series/common:user_build": [ ":arch/arm64/configs/user.fragment"],
    }),
)

kernel_abi(
    name = "mx8855_abi",
    kernel_build = ":mx8855",
    kernel_modules = [
        ":mx8855_ext_modules",
    ],
    kmi_enforced = True,
    kmi_symbol_list_add_only = True,
    module_grouping = True,
)

filegroup(
    name = "exynos.mx8855_sources",
    srcs = glob(
        ["**"],
        exclude = [
            ".*",
            ".*/**",
            "BUILD.bazel",
            "**/*.bzl",
            "build.config.*",
        ],
    ),
    visibility = [
        "//exynos/device:__subpackages__",
    ],
)

filegroup(
    name = "exynos.mx8855_kconfig",
    srcs = glob([
        "**/Kconfig",
    ]) + [
        "Kconfig.ext",
        "Kconfig.ext_modules",
    ],
    visibility = [
        "//exynos/device:__subpackages__",
    ],
)

filegroup(
    name = "mx8855.dt-bindings",
    srcs = glob([
        "include/dt-bindings/**",
        "include/dtc/**",
    ]),
    visibility = [
        "//exynos/device:__subpackages__",
    ],
)

alias(
    name = "mx8855_module",
    actual = select({
        "//exynos/soc-series/common:eng_build": ":mx8855_module.eng",
        "//exynos/soc-series/common:userdebug_build": ":mx8855_module.userdebug",
        "//exynos/soc-series/common:user_build": ":mx8855_module.user",
        "//exynos/soc-series/common:eng_fac_build": ":mx8855_module.eng.fac",
        "//exynos/soc-series/common:userdebug_fac_build": ":mx8855_module.userdebug.fac",
        "//exynos/soc-series/common:user_fac_build": ":mx8855_module.user.fac",
    }),
)


kernel_module_group(
    name = "mx8855_ext_modules",
    srcs = [
      "//exynos/soc-series/common:exynos_soc_module",
      "//exynos/external-modules/sgpu:sgpu",
      "//exynos/external-modules/camera:s5e8855_camera",
      ":mx8855_module",
    ],
)

kernel_modules_install(
    name = "mx8855_modules_install",
    kernel_build = "//exynos/soc-series/common:exynos_kernel_build",
    kernel_modules = [":mx8855_ext_modules"],
    outs = ["modules.dep", "modules.alias"],
)

check_module_list(
    name = "mx8855_check_module_list",
    kernel_modules_install = ":mx8855_modules_install",
    vendor_boot_kernel_modules = ":vendor_boot_modules_list",
    system_dlkm_kernel_modules = ":system_dlkm_modules_list",
    vendor_dlkm_kernel_modules = ":vendor_dlkm_modules_list",
)

merged_kernel_uapi_headers(
    name = "mx8855_merged_uapi_headers",
    kernel_build = "//exynos/soc-series/common:exynos_kernel_build",
    kernel_modules = [":mx8855_ext_modules"],
)

kernel_unstripped_modules_archive(
    name = "mx8855_module_symbols",
    kernel_build = "//exynos/soc-series/common:exynos_kernel_build",
    kernel_modules = [":mx8855_ext_modules"],
)

write_file(
    name = "vendor_boot_modules_list",
    out = "vendor_boot.modules.mx8855",
    content = select({
        "//exynos/soc-series/common:eng_build": get_all_vendor_boot_modules_list("eng"),
        "//exynos/soc-series/common:userdebug_build": get_all_vendor_boot_modules_list("userdebug"),
        "//exynos/soc-series/common:user_build": get_all_vendor_boot_modules_list("user"),
        "//exynos/soc-series/common:eng_fac_build": get_all_vendor_boot_modules_list("eng.fac"),
        "//exynos/soc-series/common:userdebug_fac_build": get_all_vendor_boot_modules_list("userdebug.fac"),
        "//exynos/soc-series/common:user_fac_build": get_all_vendor_boot_modules_list("user.fac"),
    })
)

write_file(
    name = "system_dlkm_modules_list",
    out = "system_dlkm_modules_list.mx8855",
    content = get_gki_modules_list("arm64"),
)

create_vendor_ramdisk(
    name = "mx8855_custom_vendor_ramdisk",
    vendor_files = [
        "//prebuilts/platform/common:fstab.s5e8855.ab",
        "//prebuilts/platform/erd8855:conf/init.recovery.s5e8855.rc",
        "//prebuilts/platform/erd8855:conf/init.s5e8855.usb.rc",
        "//prebuilts/platform/erd8855:firmware/sgpu/mgfx2.0_mid.bin",
    ],
    system_prebuilt_files = [
        "//prebuilts/boot-artifacts/arm64/exynos:system_prebuilt_files.tar.gz",
    ],
    vendor_ramdisk_list = [":vendor_ramdisk.cfg",],
)

kernel_images(
    name = "mx8855_images",
    build_initramfs = True,
    build_boot = True,
    build_vendor_boot = True,
    kernel_build = "//exynos/soc-series/common:exynos_kernel_build",
    kernel_modules_install = "mx8855_modules_install",
    base_kernel_images = "//common:kernel_aarch64_images",
    vendor_ramdisk_binaries = [
        ":mx8855_custom_vendor_ramdisk",
    ],
    modules_list = ":vendor_boot_modules_list",
    build_system_dlkm = True,
    system_dlkm_modules_list = ":system_dlkm_modules_list",
    system_dlkm_fs_type = "erofs",
    system_dlkm_modules_blocklist = ":mx8855_system_dlkm_modules_blocklist",
    dedup_dlkm_modules = True,
    build_vendor_dlkm = True,
    vendor_dlkm_archive = True,
    vendor_dlkm_fs_type = "erofs",
    vendor_dlkm_modules_list = ":vendor_dlkm_modules_list",
    vendor_dlkm_modules_blocklist = ":mx8855_vendor_dlkm_modules_blocklist",
    vendor_dlkm_props = ":vendor_dlkm_props",
    deps = [
        "//exynos/soc-series/common/impl:file_contexts",
    ],
)

dtbo(
    name = "mx8855_dtbo",
    srcs = __soc_dtbs,
)

copy_to_dist_dir(
    name = "mx8855_dist",
    data = [
        ":mx8855",
        ":mx8855_dtbo",
        ":mx8855_images",
        ":mx8855_modules_install",
        ":mx8855_module_symbols",
        ":mx8855_merged_uapi_headers",
        ":mx8855_check_module_list",
        ":vendor_kunit_modules_list",
        "//common:kernel_aarch64/Image",
        "//common:kernel_aarch64/System.map",
    ],
    dist_dir = "out/mx8855/dist",
    flat = True,
    log = "info",
)

copy_to_dist_dir(
    name = "mx8855_dist_debug",
    data = [
        "//common:kernel_aarch64/System.map",
        "//common:kernel_aarch64/vmlinux",
        "//common:kernel_aarch64_config",
        "mx8855",
        "mx8855_ext_modules",
        "mx8855_module_symbols",
        "mx8855_images",
    ],
    dist_dir = "out/mx8855/dist_debug",
    log = "info",
)

kernel_build(
    name = "mx8855_16k",
    base_kernel = "//common:kernel_aarch64_16k",
    srcs = glob([
            "build.config.*",
            "arch/arm64/boot/dts/**",
            "arch/arm64/configs/**",
            "Kconfig.ext",
            "Kconfig.ext_modules",
        ],
        exclude =[
            ".*",
            ".*/**",
            "BUILD.bazel",
            "**/*.bzl",
            "build.config.*",
        ],
    ) + [
        # keep sorted
        "//common:common_kernel_sources",
        "//exynos/soc-series/s-android15:exynos.soc_kconfig",
        "//exynos/soc-series/s-android15:exynos.soc_fragment",
        "//exynos/soc-series/s-android15:build.config.s5e8855_v",
        "//exynos/soc-series/s-android15:exynos.dt-bindings",
        "//exynos/device/mx/mx8855:exynos.mx8855_kconfig",
        "//exynos/external-modules/sgpu:sgpu.kconfig",
        "//exynos/external-modules/camera:camera.kconfig",
    ],
    kmi_symbol_list = select({
        "//exynos/soc-series/common:abi_update": "//common:android/abi_gki_aarch64_exynos",
        "//conditions:default": None,
    }),
    trim_nonlisted_kmi = False,
    kmi_symbol_list_strict_mode = False,
    outs = [
        ".config",
        "vmlinux",
        "Module.symvers",
        "modules.order",
        "exynos-base-dts/s5e8855.dtb",
        "exynos-base-dts/s5e8855.dtb.reverse.dts",
    ] + [
        f + suffix for f in lego_dtbo_list for suffix in ["", ".reverse.dts"]
    ],
    kconfig_ext = ":Kconfig.ext",
    build_config = ":build.config.mx8855_16k_v",
    dtstree = "//exynos/device/mx/mx8855/arch/arm64/boot/dts:mx8855_dt",
    # in-tree kernel modules
    module_outs = get_common_kernel_modules_list(),
    collect_unstripped_modules = True,
    strip_modules = True,
    make_goals = __make_goals,
    defconfig_fragments = select({
        "//exynos/soc-series/common:eng_build": [ ":arch/arm64/configs/eng.fragment"],
        "//exynos/soc-series/common:userdebug_build": [ ":arch/arm64/configs/userdebug.fragment"],
        "//exynos/soc-series/common:user_build": [ ":arch/arm64/configs/user.fragment"],
    }),
    page_size = "16k",
)

dtbo(
    name = "mx8855_16k_dtbo",
    srcs = __soc_dtbs_16k,
)

kernel_images(
    name = "mx8855_16k_images",
    build_initramfs = True,
    build_boot = True,
    build_vendor_boot = True,
    kernel_build = "//exynos/soc-series/common:exynos_kernel_build",
    kernel_modules_install = "mx8855_modules_install",
    base_kernel_images = "//common:kernel_aarch64_16k_images",
    vendor_ramdisk_binaries = [
        ":mx8855_custom_vendor_ramdisk",
    ],
    modules_list = ":vendor_boot_modules_list",
    build_system_dlkm = True,
    system_dlkm_modules_list = ":system_dlkm_modules_list",
    system_dlkm_modules_blocklist = ":mx8855_system_dlkm_modules_blocklist",
    dedup_dlkm_modules = True,
    build_vendor_dlkm = True,
    vendor_dlkm_archive = True,
    vendor_dlkm_modules_list = ":vendor_dlkm_modules_list",
    vendor_dlkm_modules_blocklist = ":mx8855_vendor_dlkm_modules_blocklist",
)

copy_to_dist_dir(
    name = "mx8855_16k_dist",
    data = [
        ":mx8855_16k",
        ":mx8855_16k_dtbo",
        ":mx8855_16k_images",
        ":mx8855_modules_install",
        ":mx8855_module_symbols",
        ":mx8855_merged_uapi_headers",
    ],
    dist_dir = "out/mx8855/16k/dist",
    flat = True,
    log = "info",
)

copy_to_dist_dir(
    name = "mx8855_16k_dist_debug",
    data = [
        "//common:kernel_aarch64_16k/System.map",
        "//common:kernel_aarch64_16k/vmlinux",
        "//common:kernel_aarch64_16k_config",
        "mx8855_16k",
        "mx8855_ext_modules",
        "mx8855_module_symbols",
        "mx8855_16k_images",
    ],
    dist_dir = "out/mx8855/16k/dist_debug",
    log = "info",
)

kernel_build(
    name = "mx8855_emul",
    base_kernel = "//common:kernel_aarch64",
    srcs = glob([
            "build.config.*",
            "arch/arm64/boot/dts/**",
            "arch/arm64/configs/**",
            "Kconfig.ext",
            "Kconfig.ext_modules",
        ],
        exclude =[
            ".*",
            ".*/**",
            "BUILD.bazel",
            "**/*.bzl",
            "build.config.*",
        ],
    ) + [
        # keep sorted
        "//common:common_kernel_sources",
        "//exynos/soc-series/s-android15:exynos.soc_kconfig",
        "//exynos/soc-series/s-android15:exynos.soc_fragment",
        "//exynos/soc-series/s-android15:build.config.s5e8855_v",
        "//exynos/soc-series/s-android15:exynos.dt-bindings",
        "//exynos/external-modules/sgpu:sgpu.kconfig",
        "//exynos/external-modules/camera:camera.kconfig",
    ],
    outs = [
        ".config",
        "vmlinux",
        "Module.symvers",
        "modules.order",
        "exynos-base-dts/s5e8855_emul.dtb",
        "s5e8855-mx8855_emul.dtbo",
    ],
    kconfig_ext = ":Kconfig.ext",
    build_config = ":build.config.mx8855_emul_v",
    dtstree = "//exynos/device/mx/mx8855/arch/arm64/boot/dts:mx8855_dt",
    # in-tree kernel modules
    module_outs = get_common_kernel_modules_list(),
    module_implicit_outs = get_gki_modules_list("arm64"),
    collect_unstripped_modules = True,
    strip_modules = True,
    make_goals = __make_goals,
)

kernel_module_group(
    name = "mx8855_emul_ext_modules",
    srcs = [
        "//exynos/soc-series/common:exynos_soc_module",
        "//exynos/external-modules/sgpu:sgpu",
    ],
)

kernel_modules_install(
    name = "mx8855_emul_modules_install",
    kernel_build = ":mx8855_emul",
    kernel_modules = [":mx8855_emul_ext_modules"],
)

kernel_unstripped_modules_archive(
    name = "mx8855_emul_module_symbols",
    kernel_build = ":mx8855_emul",
    kernel_modules = [":mx8855_emul_ext_modules"],
)

create_vendor_ramdisk(
    name = "mx8855_emul_custom_vendor_ramdisk",
    vendor_files = [
        "//prebuilts/platform/mx8855:conf/fstab.s5e8855.virtio",
        "//prebuilts/platform/mx8855:conf/init.recovery.s5e8855.rc",
        "//prebuilts/platform/mx8855:conf/init.s5e8855.usb.rc",
        "//prebuilts/platform/mx8855:firmware/sgpu/mgfx2.0_mid.bin",
    ],
    system_prebuilt_files = [
        "//prebuilts/boot-artifacts/arm64/exynos:system_prebuilt_files.tar.gz",
    ],
    vendor_ramdisk_list = [":vendor_ramdisk.cfg",],
)

kernel_images(
    name = "mx8855_emul_images",
    build_initramfs = True,
    build_boot = True,
    build_vendor_boot = True,
    kernel_build = ":mx8855_emul",
    kernel_modules_install = "mx8855_emul_modules_install",
    base_kernel_images = "//common:kernel_aarch64_images",
    vendor_ramdisk_binaries = [
        ":mx8855_emul_custom_vendor_ramdisk",
        #"//prebuilts/boot-artifacts/arm64/exynos:eng/ramdisk_for_console.cpio.lz4",
    ],
    modules_list = ":vendor_boot_modules_list",
    build_system_dlkm = True,
    system_dlkm_modules_list = ":system_dlkm_modules_list",
    dedup_dlkm_modules = True,
    build_vendor_dlkm = True,
    vendor_dlkm_archive = True,
    vendor_dlkm_modules_list = ":vendor_dlkm_modules_list",
)

dtbo_cfg(
    name = "mx8855_emul_dtbo_cfg",
    srcs = __soc_dtbs_emul,
    config_file = ":emul_dtboimg.cfg",
)

copy_to_dist_dir(
    name = "mx8855_emul_dist",
    data = [
        ":mx8855_emul",
        ":mx8855_emul_dtbo_cfg",
        ":mx8855_emul_images",
        ":mx8855_emul_modules_install",
        ":mx8855_emul_module_symbols",
    ],
    dist_dir = "out/mx8855_emul/dist",
    flat = True,
    log = "info",
)

register_mx8855_module()
