# SPDX-License-Identifier: GPL-2.0-or-later

load("//build/kernel/kleaf:kernel.bzl", "kernel_dtstree")

kernel_dtstree(
    name = "erd9955_dt",
    srcs = glob([
        "Makefile",
        "erd/Makefile",
        "erd/**/*.dtsi",
        "erd/**/*.dtso",
        "exynos-base-dts/Makefile",
        "exynos-base-dts/**/*.dts",
        "exynos-base-dts/**/*.dtsi",
    ],
        exclude = [
            "**/.*",
            "**/.*/**",
            "**/BUILD.bazel",
            "**/*.bzl",
        ],
    ) + [
        "//exynos/soc-series/s-android15:exynos.dt-bindings",
    ],
    visibility = [
        "//exynos/device/erd/erd9955:__pkg__",
    ],
)

